--- a/assets/css/_vars.pcss
+++ b/assets/css/_vars.pcss
@@ -33,6 +33,8 @@
 
   --border-color: var(--color-primary-400);
   --border-color-secondary: var(--color-primary);
+  --header-height: 4rem;
+  --header-height-desktop: 5rem;
 }
 
 .light {
