--- a/assets/css/_grid.pcss
+++ b/assets/css/_grid.pcss
@@ -1,10 +1,16 @@
 @layer base {
   .wrapper {
     min-height: 100vh;
-    @apply my-0 pt-16 mx-auto flex justify-center items-start flex-col;
+    padding-top: var(--header-height);
+    @apply my-0 mx-auto flex justify-center items-start flex-col;
   }
 
   main {
-    @apply flex flex-col flex-auto w-full mx-auto px-8 pt-4 pb-16;
+    @apply flex flex-col flex-auto w-full mx-auto pb-16;
+  }
+  @screen md {
+    .wrapper {
+      padding-top: var(--header-height-desktop);
+    }
   }
 }
